// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoyaltyBanner View Component earnedReward isGuest should render correctly 1`] = `
<div
  className=" elem-mb-MED"
>
  <div
    className="backgroundWhite elem-pt-SM elem-pb-SM elem-pl-MED elem-pr-MED"
  >
    <Styled(BodyCopy)
      className="loyaltyBannerSectionWrapper"
      color="text.primary"
      component="div"
      fontFamily="secondary"
      fontSize={12}
      fontWeight="regular"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="left"
    >
      <div
        className="footer alignCenter elem-pt-MED elem-pb-MED"
      >
        <Styled(Anchor)
          anchorVariation="primary"
          className="learnMore elem-pl-XL"
          fontSizeVariation="medium"
          underline={true}
        />
      </div>
    </Styled(BodyCopy)>
  </div>
</div>
`;

exports[`LoyaltyBanner View Component earnedReward should render correctly 1`] = `
<div
  className=" elem-mb-MED"
>
  <div
    className="backgroundWhite elem-pt-SM elem-pb-SM elem-pl-MED elem-pr-MED"
  >
    <Styled(BodyCopy)
      className="loyaltyBannerSectionWrapper"
      color="text.primary"
      component="div"
      fontFamily="secondary"
      fontSize={12}
      fontWeight="regular"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="left"
    >
      <div
        className="footer alignCenter elem-pt-MED elem-pb-MED"
      >
        <Styled(Anchor)
          anchorVariation="primary"
          className="learnMore elem-pl-XL"
          fontSizeVariation="medium"
          underline={true}
        />
      </div>
    </Styled(BodyCopy)>
  </div>
</div>
`;

exports[`LoyaltyBanner View Component isGuest isPlcc should render correctly 1`] = `
<div
  className=" elem-mb-MED"
>
  <div
    className="backgroundWhite elem-pt-SM elem-pb-SM elem-pl-MED elem-pr-MED"
  >
    <Styled(BodyCopy)
      className="loyaltyBannerSectionWrapper"
      color="text.primary"
      component="div"
      fontFamily="secondary"
      fontSize={12}
      fontWeight="regular"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="left"
    >
      <Styled(GuestMprPlccSection)
        className=""
        currentSubtotal={21}
        earnedReward={1}
        estimatedSubtotal={33}
        finalPointsLabelStr={
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
          />
        }
        getCurrencySymbol=""
        isPlcc={false}
        labels={Object {}}
        remainingPlcc=""
        showSubtotal={true}
      />
      <div
        className="footer alignCenter elem-pt-MED elem-pb-MED"
      >
        <Styled(Anchor)
          anchorVariation="primary"
          className="applyNow"
          fontSizeVariation="medium"
          underline={true}
        />
        <Styled(Anchor)
          anchorVariation="primary"
          className="learnMore elem-pl-XL"
          fontSizeVariation="medium"
          underline={true}
        />
      </div>
    </Styled(BodyCopy)>
  </div>
</div>
`;

exports[`LoyaltyBanner View Component isGuest should render correctly 1`] = `
<div
  className=" elem-mb-MED"
>
  <div
    className="backgroundWhite elem-pt-SM elem-pb-SM elem-pl-MED elem-pr-MED"
  >
    <Styled(BodyCopy)
      className="loyaltyBannerSectionWrapper"
      color="text.primary"
      component="div"
      fontFamily="secondary"
      fontSize={12}
      fontWeight="regular"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="left"
    >
      <div
        className="footer alignCenter elem-pt-MED elem-pb-MED"
      >
        <Styled(Anchor)
          anchorVariation="primary"
          className="learnMore elem-pl-XL"
          fontSizeVariation="medium"
          underline={true}
        />
      </div>
    </Styled(BodyCopy)>
  </div>
</div>
`;

exports[`LoyaltyBanner View Component isPlcc should render correctly 1`] = `
<div
  className=" elem-mb-MED"
>
  <div
    className="backgroundWhite elem-pt-SM elem-pb-SM elem-pl-MED elem-pr-MED"
  >
    <Styled(BodyCopy)
      className="loyaltyBannerSectionWrapper"
      color="text.primary"
      component="div"
      fontFamily="secondary"
      fontSize={12}
      fontWeight="regular"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="left"
    >
      <Styled(GuestMprPlccSection)
        className=""
        currentSubtotal={21}
        earnedReward={0}
        estimatedSubtotal={33}
        finalPointsLabelStr={
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
          />
        }
        getCurrencySymbol=""
        isPlcc={false}
        labels={Object {}}
        remainingPlcc=""
        showSubtotal={true}
      />
      <div
        className="footer alignCenter elem-pt-MED elem-pb-MED"
      >
        <Styled(Anchor)
          anchorVariation="primary"
          className="applyNow"
          fontSizeVariation="medium"
          underline={true}
        />
        <Styled(Anchor)
          anchorVariation="primary"
          className="learnMore elem-pl-XL"
          fontSizeVariation="medium"
          underline={true}
        />
      </div>
    </Styled(BodyCopy)>
  </div>
</div>
`;

exports[`LoyaltyBanner View Component not isPlcc should render correctly 1`] = `
<div
  className=" elem-mb-MED"
>
  <div
    className="backgroundWhite elem-pt-SM elem-pb-SM elem-pl-MED elem-pr-MED"
  >
    <Styled(BodyCopy)
      className="loyaltyBannerSectionWrapper"
      color="text.primary"
      component="div"
      fontFamily="secondary"
      fontSize={12}
      fontWeight="regular"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="left"
    >
      <Styled(GuestMprPlccSection)
        className=""
        currentSubtotal={21}
        earnedReward={0}
        estimatedSubtotal={33}
        finalPointsLabelStr={
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
          />
        }
        getCurrencySymbol=""
        isPlcc={false}
        labels={Object {}}
        remainingPlcc=""
        showSubtotal={true}
      />
      <div
        className="footer alignCenter elem-pt-MED elem-pb-MED"
      >
        <Styled(Anchor)
          anchorVariation="primary"
          className="applyNow"
          fontSizeVariation="medium"
          underline={true}
        />
        <Styled(Anchor)
          anchorVariation="primary"
          className="learnMore elem-pl-XL"
          fontSizeVariation="medium"
          underline={true}
        />
      </div>
    </Styled(BodyCopy)>
  </div>
</div>
`;
